2003-06-17  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el (LilyPond-un-comment-region): removed.
	Use one command for both commenting and uncommenting.

	* lilypond-indent.el (LilyPond-comment-region): new function,
	(un)comments each line separately.

	* lilypond-mode.el, lilypond-indent.el: fix XEmacs paren-match.
	
2003-06-16  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Set show-paren-mode local; minor-mode
	show-paren-mode sets blink-matching-paren-on-screen local.
	Try to make show-paren-function to paren-highlight local.

	* lilypond-indent.el (LilyPond-scan-sexps): new function.
	Copy definitions of Emacs' show-paren-function and
	XEmacs' paren-highlight and make minimal changes;
	add comments about locality. 
	Fix matching first open-paren-char in '<< .. >>'.

2003-06-16  Graham Percival  <gperlist@shaw.ca>

	* input/test/g*: added texidoc index.

	* input/test/[a-g]*: added raggedright==#t when it
	 seemed appropiate.

	* input/test/ fake-grace.ly figured-bass.ly : removed file.

	* Documentation/topdoc/INSTALL.texi: removed false warnings
	about gcc 3.3.

2003-06-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/spanner-after-break-tweak.ly (texidoc): new file.

	* input/test/chords-without-melody.ly (texidoc): add from
	input/just-friends.ly

	* input/regression/size{13--26}.ly: move from input/

	* input/{opus-130,praeludium-fuga,scarlatti-*}.ly
	input/{star-spangled-banner,twinkle}.ly: remove 
	
	* lily/slur.cc: remove slur over rest warnings.

	* lily/note-spacing.cc (get_spacing): include left part of right
	object in fixed space. This fixes stretched space before
	accidentals.

	* input/regression/spacing-accidental-stretch.ly: new file.

2003-06-16  Rune Zedeler  <rz@daimi.au.dk>

	* input/mutopia/R.Schumann/romanze-op28-2.ly: Minor fixes.
	Reduce to 16pt.

2003-06-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/spacing-knee.ly: docstring

	* input/regression/spacing-multi-tuplet.ly (multipart): docstring
