@@ -1,3 +1,11 @@
+2003-06-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* scm/music-functions.scm (make-ottava-set): 
+	only do ottavation if centralCPosition is set.
+
+	* lily/translator-scheme.cc (ly:context-property-where-defined):
+	return '() if not found.
+
 2003-06-17  Heikki Junes  <hjunes@cc.hut.fi>
 
 	* lilypond-mode.el (LilyPond-un-comment-region): removed.
